force-app/main/default/objects/OmniScriptSavedSession/fields/ABS_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>ABS_Application_Id__c</fullName>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>