force-app/main/default/objects/OmniScriptSavedSession/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>