force-app/main/default/objects/OmniScriptSavedSession/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>