force-app/main/default/objects/OmniScriptSavedSession/fields/RegAuthCode__c.field-meta.xml
<CustomField>
    <fullName>RegAuthCode__c</fullName>
    <label>Regulatory Authorization Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>