force-app/main/default/objects/OmniScriptSavedSession/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name</columns>
    <columns>IsContentEncoded</columns>
    <columns>LastSavedDateTime</columns>
    <columns>OmniScriptLocaleCode</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>